@@ -1,3 +1,15 @@
+2014-02-05  Sancho Lerena <slerena@artica.es>
+
+	* operation/newsletter/address_creation.php,
+	operation/newsletter/issue_creation.php,
+        operation/newsletter/address_definition.php,
+        operation/newsletter/queue_manager.php,
+        operation/newsletter/issue_definition.php,
+        operation/newsletter/newsletter_definition.php,
+        operation/main_menu.php,
+        operation/side_menu.php: Changes on CRM ACL system. Fixed old settings for
+	permission bit for Newsletter.
+
 2014-02-04  Mario Pulido <mario.pulido@artica.es>
 
 	* integria.centos.spec,
